# arxie

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  DEVLOG.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  SOUL.md  TODO.md  agent.yaml  alembic.ini  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/scripts/: arxie_pr_quality.py
.github/workflows/: arxie-pr-quality.yml  release-smoke.yml
data/: api-usage.jsonl
docs/: API.md  INSTALL.md  MIGRATION.md  PRD-v0.2.md  PRD.md  PRE-PRD-v0.2.md  TEAM-SOP.md  TROUBLESHOOTING.md  USAGE_EXAMPLES.md  USER_GUIDE.md  eval-baseline-results.json  eval-baseline.md
docs/architecture/: 01-system-overview.md  02-paperbase-core.md  03-ingest-and-extraction.md  04-search-compare.md  05-assistant-integration.md  06-collections-and-annotations.md  07-design-principles.md  README.md
docs/decisions/: 001-model-selection.md
docs/diagrams/: README.md  agent-module.mmd  cli-module.mmd  overview.mmd  retrieval-module.mmd
docs/plans/: 2026-04-14-arxie-homepage.md  2026-04-14-arxie-platform-implementation-plan.md  2026-04-14-arxie-platform-prd.md  2026-04-14-paperbase-local-persistence-implementation-plan.md  2026-04-15-arxie-workspace-ui-and-saved-workspaces-implementation-plan.md  2026-04-15-paperbase-api-service-implementation-plan.md  2026-04-15-paperbase-arxie-gateway-implementation-plan.md  2026-04-15-paperbase-author-tag-metadata-implementation-plan.md  2026-04-15-paperbase-collections-annotations-api-implementation-plan.md  2026-04-15-paperbase-compare-workflows-implementation-plan.md  2026-04-15-paperbase-extraction-api-implementation-plan.md  2026-04-15-paperbase-extraction-implementation-plan.md  2026-04-15-paperbase-figure-table-artifacts-implementation-plan.md  2026-04-15-paperbase-hybrid-search-and-pipeline-jobs-implementation-plan.md  2026-04-15-paperbase-local-library-import-implementation-plan.md  2026-04-15-paperbase-operator-skills-implementation-plan.md  2026-04-15-paperbase-proposal-lit-review-integration-implementation-plan.md  2026-04-15-paperbase-search-filters-implementation-plan.md  2026-04-15-paperbase-search-ops-implementation-plan.md  2026-04-15-paperbase-search-read-models-implementation-plan.md  2026-04-15-paperbase-structured-data-api-implementation-plan.md  2026-04-15-paperbase-ui-implementation-plan.md  2026-04-15-paperbase-workerized-background-execution-implementation-plan.md  2026-04-15-sc-regnet-extraction-hardening-implementation-plan.md  2026-04-15-sc-regnet-field-profile-implementation-plan.md  2026-04-30-arxie-workspace-ui-redesign-implementation-plan.md
docs/runbooks/: paperbase-ingest.md  paperbase-reindex.md
infra/: docker-compose.paperbase.yml
infra/env/: minio.env  paperbase.env  postgres.env  redis.env
remotion/: package-lock.json  package.json  tsconfig.json
remotion/src/: ArxieVsGpt4o.tsx  CitationGraphVisualization.tsx  Root.tsx  config.ts  data.ts
remotion/tests/: citation-graph-visualization.test.tsx  comparison-data.test.ts  composition-meta.test.ts  dashboard-layout-scaffold.test.tsx  evidence-map.test.tsx  hypothesis-branch-tree.test.tsx  logical-backbone-tree.test.tsx  proposal-shell-m2-integration-smoke.test.ts  proposal-stage-navigator.test.tsx  stage-transition-confirmation.test.ts
results/: eval_results.json  eval_summary.md
services/: __init__.py
services/paperbase_api/: __init__.py  app.py  background_jobs.py  dependencies.py  errors.py  health.py  main.py  models.py  normalization.py  path_policy.py  security.py  upload_parser.py
services/paperbase_worker/: __init__.py  main.py  runtime.py
skills/paperbase-corpus-ops/: SKILL.md
skills/paperbase-elasticsearch/: SKILL.md
skills/paperbase-postgres/: SKILL.md
src/paperbase/: __init__.py  config.py  jobs.py  model_providers.py  projects.py  (+4 more)
tests/: conftest.py  test_trace_influence.py
(+260 files in other folders)
