[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "academic-research-assistant"
version = "0.2.0"
description = "AI research workspace with a persistent paper database, structured evidence extraction, hybrid search, and proposal workflows"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Mya"}
]

dependencies = [
    # LLM Framework
    "langchain==1.2.10",
    "langchain-openai==1.1.10",
    "langchain-core==1.2.16",
    "langchain-community==0.4.1",
    "langgraph==1.0.9",
    "langgraph-prebuilt==1.0.8",
    "langgraph-checkpoint==4.0.0",
    "langgraph-sdk==0.3.9",
    "langsmith==0.7.7",
    
    # Retrieval
    "chromadb>=0.5.0",
    
    # API Clients
    "httpx>=0.27.0",
    "aiohttp>=3.9.0",
    
    # PDF Processing
    "PyMuPDF>=1.24.0",
    "pdfplumber>=0.11.0",
    
    # Utilities
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "typer>=0.12.0",
    "fastapi>=0.115.0",
    "python-multipart>=0.0.9",
    "alembic>=1.16.0",
    "SQLAlchemy>=2.0.0",
    "psycopg[binary]>=3.2.0",
    "redis>=5.0.0",
    "minio>=7.2.0",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]
local-embeddings = [
    "sentence-transformers>=5.2.3",
]

[project.scripts]
ra = "ra.cli:main"
arxie-local = "paperbase.launcher.cli:main"
paperbase-api = "services.paperbase_api.main:main"
paperbase-worker = "services.paperbase_worker.main:main"
paperbase-db = "paperbase.db.cli:main"

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["ra*", "paperbase*", "services*"]
exclude = ["tests*", "docs*", "remotion*", "skills*", "tools*"]

[tool.setuptools.package-data]
"services.paperbase_api" = [
    "static/*.html",
    "static/*.css",
    "static/*.js",
    "static/app/*.html",
    "static/app/assets/*.css",
    "static/app/assets/*.js",
    "static/js/*.js",
]
"paperbase.db.migrations" = ["script.py.mako"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = ["integration: marks tests as integration tests (may use network)"]

[tool.mypy]
python_version = "3.10"
strict = true
